--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,14 @@ pdoc3 = "^0.10.0"
 pandas = "^1.4.2"
 prefect = "^1.2.0"
 rich = "^12.2.0"
+pre-commit = "^2.18.1"
+click = "8.0.4"
+fuzzywuzzy = "^0.18.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 pre-commit = "^2.17.0"
+jupyterlab = "^3.3.4"
 
 [virtualenvs]
 create = true
