--- a/config/main.yaml
+++ b/config/main.yaml
@@ -13,9 +13,14 @@ clean_data:
 feature_data:
   path: data/features_data/features.csv
 
+model:
+  dir: models
+  name: XGBoost
+  path: ${model.dir}/${final.name}
 
 outliers:
   upper_limit: 0.98
   lower_limit: 0.02
+
 
 wandb_mode:
