--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,16 @@ wandb = "^0.12.14"
 nltk = "^3.7"
 scipy = "1.8.0"
 scikit-learn = "1.0.2"
+pandera = "^0.10.1"
+pytest-steps = "^1.8.0"
+yellowbrick = "^1.4"
+urllib3 = "^1.26.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 pre-commit = "^2.17.0"
 jupyterlab = "^3.3.4"
+pdoc = "^11.0.0"
 
 [virtualenvs]
 create = true
