--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,6 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
 name: Run tests
+
+on:
+   push:
+	branches:
+	 - "main"
 # Controls when the workflow will run
 on:[push]
 
