--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -3,9 +3,12 @@
 name: Run tests
 
 on:
-   push:
-	branches:
-	 - "main"
+  push:
+    branches:
+      - "main"
+  pull_request:
+    branches:
+      - "main"
 # Controls when the workflow will run
 on:[push]
 
