--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ dvc = "^2.10.0"
 hydra-core = "^1.1.1"
 pandas = "^1.4.2"
 prefect = "^1.2.0"
-rich = "^12.2.0"
 pre-commit = "^2.18.1"
 click = "8.0.4"
 fuzzywuzzy = "^0.18.0"
@@ -22,6 +21,7 @@ pandera = "^0.10.1"
 pytest-steps = "^1.8.0"
 yellowbrick = "^1.4"
 urllib3 = "^1.26.9"
+bentoml = "1.0.0a4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
