updates with xgboost

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ pytest-steps = "^1.8.0"
 yellowbrick = "^1.4"
 urllib3 = "^1.26.9"
 bentoml = "1.0.0a4"
+streamlit = "^1.8.1"
+xgboost = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
